--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@ img {
     height: 100%;
     background-size: cover;
     background-position: center;
-    animation: fadeIn .5s linear;
+    animation: fadeIn 1s linear;
     filter: brightness(50%);
     z-index: -1;
 }
